tests/NormalTests/paczka1/small_fuzzy/16435708.err
Error in line 3: UAYm2sS S643 96,4
Error in line 14: hqZ S16 51,81
